--- a/public/css/_dialog.css
+++ b/public/css/_dialog.css
@@ -19,7 +19,7 @@ dialog.dialog {
   user-select: none;
   padding: 5px;
   overflow: unset !important;
-  z-index: 5;
+  isolation: isolate;
 }
 
 dialog.modal {
