--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -651,7 +651,8 @@
     },
 
     // mapp.Mapview must be awaited.
-    syncPlugins: locale.syncPlugins
+    syncPlugins: locale.syncPlugins,
+    svgTemplates: locale.svgTemplates
   });
 
   if (!locale.layers?.length && !(locale instanceof Error)) {
