--- a/public/css/_layerview.css
+++ b/public/css/_layerview.css
@@ -31,6 +31,16 @@
   }
 }
 
+.layer-view {
+  & .layer-view{
+    > .header {
+      h2{
+        font-weight: normal;
+      }
+    }
+  }
+}
+
 .drawer.layer-group {
   padding-left: 3px;
   padding-right: 3px;
@@ -39,6 +49,12 @@
   & >* {
     padding-left: 4px;
     padding-right: 4px;
+  }
+  
+  & .layer-view{
+    h2 {
+      font-weight: normal
+    }
   }
 }
 
