--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -18,7 +18,7 @@
     <script type="importmap">
         {
           "imports": {
-            "codi": "https://esm.sh/codi-test-framework@0.0.36"
+            "codi": "https://esm.sh/codi-test-framework@0.0.39"
           }
         } </script>
 
@@ -347,24 +347,10 @@
             let results = {};
 
             if (integrity) {
-                results = await codi.runWebTests(testFiles);
+                results = await codi.runWebTests(testFiles, {});
             } else {
-                results = await codi.runTestFunction(_mappTest.coreTest, { quiet: true });
-                console.log(results);
+                results = await codi.runTestFunction(_mappTest.coreTest, { quiet: true, showSummary: true });
             }
-
-            mapp.ui.elements.dialog(
-                {
-                    target: document.getElementById('Map'),
-                    content: `${results}`,
-                    height: 'auto',
-                    css_style: 'padding: 0.5em;',
-                    top: '3em',
-                    left: '6em',
-                    contained: true,
-                    close: true
-                }
-            );
 
             const shouldDownload = urlParams.get('download') === 'true';
 
