Only check for h2's inside header

--- a/public/css/_layerview.css
+++ b/public/css/_layerview.css
@@ -52,8 +52,10 @@
   }
   
   & .layer-view{
-    h2 {
-      font-weight: normal
+    > .header{
+      h2 {
+        font-weight: normal
+      }
     }
   }
 }
