--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -18,7 +18,7 @@
     <script type="importmap">
         {
           "imports": {
-            "codi": "https://esm.sh/codi-test-framework@0.0.39"
+            "codi": "https://esm.sh/codi-test-framework@0.0.46"
           }
         } </script>
 
@@ -347,9 +347,9 @@
             let results = {};
 
             if (integrity) {
-                results = await codi.runWebTests(testFiles, {});
+                results = await codi.runWebTests(testFiles);
             } else {
-                results = await codi.runTestFunction(_mappTest.coreTest, { quiet: true, showSummary: true });
+                results = await codi.runWebTestFunction(_mappTest.coreTest);
             }
 
             const shouldDownload = urlParams.get('download') === 'true';
