--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -545,7 +545,7 @@
   // Create layers listview.
   mapp.ui.layers.listview({
     target: layersTab,
-    mapview: mapview,
+    layers: locale.layers,
   });
 
   // Create locations listview.
