Scrollbar rules in ui.css.

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -18,6 +18,27 @@
 
 @import url('./_tabview.css');
 
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-primary-light);
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary);
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
+  border-radius: 2px;
+}
+
 .no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
