--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -593,6 +593,7 @@
     });
   }
 
+  // Check whether the locale supports a userLocale
   if (locale.userLocale) {
 
     const userLocale = await mapp.utils.userLocale.get(locale)
