Load Plugins When Specified

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -638,6 +638,7 @@
     locale: locale,
     hooks: true,
     scrollWheelZoom: true,
+    loadPlugins: true,
     attribution: {
       target: document.getElementById('Map'),
       logo: mapp.utils.html.node`
