--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -18,6 +18,8 @@
   <script type="module" src="{{dir}}/public/js/lib/mapp.js" defer></script>
   <script type="module" src="{{dir}}/public/js/lib/ui.js" defer></script>
 
+  <script type="module" src="{{dir}}/public/js/tests/_mapp.test.js" defer></script>
+
   <style>
     html {
       position: fixed;
