--- a/public/css/_locationview.css
+++ b/public/css/_locationview.css
@@ -25,6 +25,11 @@
       grid-column: 1;
     }
 
+    &.inline>div:nth-of-type(2) {
+      grid-column: 2;
+      min-width: 0;
+    }
+
     &.inline>.val {
       grid-column: 2;
       text-align: right;
