--- a/public/css/base/_globals.css
+++ b/public/css/base/_globals.css
@@ -6,15 +6,25 @@ body {
   color: var(--color-off-black);
 }
 
+*,
+*::after,
+*::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border-spacing: 0;
+  font-family: inherit;
+  font-size: inherit;
+}
+
 a {
   text-decoration: none;
   font-weight: bold;
   color: var(--color-primary);
-
-  &.mask-icon,
-  &>.mask-icon {
-    background-color: var(--color-primary);
-  }
 }
 
 li {
@@ -34,8 +44,4 @@ h2 {
 h3 {
   font-size: 105%;
   font-weight: 600;
-}
-
-.bold {
-  font-weight: bold;
 }
