--- a/public/css/_mapp.css
+++ b/public/css/_mapp.css
@@ -94,7 +94,7 @@ a > img {
 }
 
 
-/*** which legend is it ? ***/
+/*** which legend is it ? the layer panel legend ?? ***/
 .legend {
 
   & .contents-wrapper,
