--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -12,9 +12,19 @@
 
 @import url('./base/_inputs.css');
 
-@import url('./elements/_drawer.css');
+
+@import url('./elements/_alert.css');
+
+@import url('./elements/_btnPanel.css');
+
+@import url('./elements/_chkbox.css');
 
 @import url('./elements/_dialog.css');
+
+@import url('./elements/_drawer.css');
+
+@import url('./elements/_dropdown.css');
+
 
 @import url('./layout/_layerview.css');
 
