--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -127,3 +127,12 @@
     height: 180px;
   }
 }
+
+.flex-spacer {
+  display: flex;
+  align-items: center;
+
+  &> :nth-child(2) {
+      margin-left: auto;
+  }
+}
