--- a/public/css/elements/_slider.css
+++ b/public/css/elements/_slider.css
@@ -59,6 +59,7 @@
   
     & input[type='range'] {
       -webkit-appearance: none;
+      appearance: none;
       grid-column: 1/3;
       grid-row: 2;
       z-index: 3;
@@ -100,7 +101,7 @@
     /* get rid of Firefox corner rounding */
     pointer-events: auto;
     cursor: pointer;
-    background: url("../icons/thumb.svg");
+    background: url("../../icons/thumb.svg");
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: none;
@@ -115,7 +116,7 @@
     /* get rid of Firefox corner rounding */
     pointer-events: auto;
     cursor: pointer;
-    background: url("../icons/thumb.svg");
+    background: url("../../icons/thumb.svg");
     background-repeat: no-repeat;
     background-position: center;
     box-shadow: none;
