--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -13,7 +13,7 @@
 @import url('./base/_inputs.css');
 
 
-@import url('./elements/_alert.css');
+@import url('./elements/_alert_confirm.css');
 
 @import url('./elements/_btnPanel.css');
 
