--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -14,259 +14,10 @@
   <!-- Load XYZ / MAPP stylesheet and library. -->
   <link rel="stylesheet" href="{{dir}}/public/css/mapp.css" />
   <link rel="stylesheet" href="{{dir}}/public/css/ui.css" />
+  <link rel="stylesheet" href="{{dir}}/public/css/views/default.css" />
 
   <script type="module" src="{{dir}}/public/js/lib/mapp.js" defer></script>
   <script type="module" src="{{dir}}/public/js/lib/ui.js" defer></script>
-
-  <style>
-    html {
-      position: fixed;
-      bottom: 0%;
-      top: 0%;
-      height: 100%;
-      width: 100%;
-    }
-
-    #Map {
-      position: relative;
-    }
-
-    #Map .ol-scale-line {
-      right: 5px;
-      top: 5px;
-      position: fixed;
-    }
-
-    .map-attribution>.logo {
-      pointer-events: auto;
-      height: 1em;
-    }
-
-    #mapButton {
-      pointer-events: none;
-    }
-
-    #mapButton>* {
-      pointer-events: auto;
-    }
-
-    #mapButton .mask-icon.lock-open {
-      background-color: #AFB42B;
-    }
-
-    #mapButton .mask-icon.logout {
-      background-color: #B71C1C;
-    }
-
-    #ctrls {
-      z-index: 9999;
-    }
-
-    #ctrl-tabs {
-      height: 50px;
-      width: 100%;
-      display: flex;
-      background-color: #003D57;
-    }
-
-    #ctrl-tabs>div {
-      flex-grow: 1;
-      mask-size: 3em;
-      -webkit-mask-size: 3em;
-      mask-position: center;
-      -webkit-mask-position: center;
-    }
-
-    #ctrl-tabs>.active {
-      background-color: #E18335;
-    }
-
-    #ctrl-tabs>.locations.mask-icon {
-      -webkit-mask-image: url("{{dir}}/public/icons/icon-search.svg");
-      mask-image: url("{{dir}}/public/icons/icon-search.svg");
-    }
-
-    #ctrl-tabs>.locations.mask-icon.active {
-      -webkit-mask-image: url("{{dir}}/public/icons/icon-location.svg");
-      mask-image: url("{{dir}}/public/icons/icon-location.svg");
-    }
-
-    #ctrl-panel {
-      height: calc(100% - 50px);
-      overflow-y: auto;
-    }
-
-    #ctrl-panel>div {
-      display: none;
-      padding: 10px;
-    }
-
-    #ctrl-panel>div.active {
-      display: block;
-    }
-
-    .bg-icon.mapp {
-      background-image: url("https://geolytix.github.io/public/mapp_v4/emblem.svg");
-    }
-
-    @media only screen and (min-width: 768px) {
-
-      body {
-        display: grid;
-        grid-template-columns: 350px 10px auto;
-      }
-
-      body.fullscreen {
-        grid-template-columns: 0 0 auto !important;
-      }
-
-      body.fullscreen #ctrls {
-        display: none;
-      }
-
-      #Map {
-        grid-row: 1;
-        grid-column: 3;
-        position: relative;
-      }
-
-      #OL {
-        width: 100%;
-        height: 100vh;
-        position: absolute;
-      }
-
-      .map-attribution {
-        padding-left: 4em;
-      }
-
-      #mapButton {
-        position: absolute;
-        height: 100%;
-        grid-row: 1/4;
-        grid-column: 3;
-        background-color: #fff;
-        opacity: 0.8;
-      }
-
-      #ctrl-panel {
-        transform: rotateY(180deg);
-      }
-
-      #ctrl-panel>div {
-        transform: rotateY(180deg);
-      }
-
-      #ctrls {
-        grid-row: 1/4;
-        grid-column: 1;
-        height: 100%;
-        overflow: hidden;
-      }
-
-      #Tabview {
-        grid-row: 3;
-        grid-column: 3;
-      }
-
-      #ctrls-divider {
-        grid-row: 1/4;
-        grid-column: 2;
-        background-image: url("{{dir}}/public/icons/pill-vertical.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-        box-shadow: 3px 0px 6px -3px #777;
-        z-index: 9999;
-      }
-
-      #ctrls-divider:hover {
-        cursor: col-resize;
-      }
-
-      #tabview-divider {
-        position: relative;
-        grid-row: 2;
-        grid-column: 3;
-        background-image: url("{{dir}}/public/icons/pill-horizontal.svg");
-        background-repeat: no-repeat;
-        background-position: center;
-        background-color: white;
-        box-shadow: 0px -1px 6px -3px #777;
-      }
-
-      #tabview-divider:hover {
-        cursor: row-resize;
-      }
-
-      .desktop-display-none {
-        display: none;
-      }
-    }
-
-    @media only screen and (max-width: 768px) {
-
-      html {
-        overflow: scroll;
-      }
-
-      body {
-        overflow-y: scroll;
-        overflow-x: hidden;
-      }
-
-      #Map {
-        height: calc(100% - 50px);
-        width: 100%;
-      }
-
-      #OL {
-        width: 100%;
-        height: 100%;
-      }
-
-      #mapButton {
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-      }
-
-      #mapButton>button,
-      #mapButton>a {
-        margin-bottom: 10px;
-        background-color: white;
-        box-shadow: 1px 1px 3px #777;
-        border-radius: 50%;
-        opacity: 0.9;
-        padding: 5px;
-        width: 3em;
-        height: 3em;
-      }
-
-      #ctrls {
-        width: 100%;
-        height: 100%;
-        position: relative;
-      }
-
-      #ctrls-divider {
-        display: none;
-      }
-
-      .mobile-hidden {
-        visibility: hidden;
-      }
-
-      .mobile-display-none {
-        display: none !important;
-      }
-
-      .mobile-disabled {
-        opacity: 0.3;
-        pointer-events: none;
-      }
-    }
-  </style>
 
 </head>
 
