--- a/public/views/login/_login_ko.html
+++ b/public/views/login/_login_ko.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script src="{{dir}}/public/views/login/_login.js" defer></script>
-  <link rel="stylesheet" href="{{dir}}/public/views/login/_login.css" />
+  <link rel="stylesheet" href="{{dir}}/public/css/views/login.css" />
 
 </head>
 
