--- a/public/views/_user.html
+++ b/public/views/_user.html
@@ -13,6 +13,128 @@
 
   <script src="https://unpkg.com/uhtml@3.2.1/es.js" defer></script>
 
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      border-spacing: 0;
+    }
+
+    body {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      padding: 40px;
+      font: 14px "Open Sans", sans-serif;
+    }
+
+    body>.flex {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .icon-face {
+      background-image: url("{{dir}}/public/icons/icon-face.svg");
+    }
+
+    .icon-logout {
+      background-image: url("{{dir}}/public/icons/icon-logout.svg");
+    }
+
+    .icon-tick-done {
+      background-image: url("{{dir}}/public/icons/icon-tick-done.svg");
+    }
+
+    .icon-tick-done-all {
+      background-image: url("{{dir}}/public/icons/icon-tick-done-all.svg");
+    }
+
+    .icon-warning {
+      background-image: url("{{dir}}/public/icons/icon-warning.svg");
+    }
+
+    .icon-translate {
+      background-image: url("{{dir}}/public/icons/icon-translate.svg");
+    }
+
+    .icon-supervisor-account {
+      background-image: url("{{dir}}/public/icons/icon-supervisor-account.svg");
+    }
+
+    .icon-settings {
+      background-image: url("{{dir}}/public/icons/icon-settings.svg");
+    }
+
+    .icon-key {
+      background-image: url("{{dir}}/public/icons/icon-key.svg");
+    }
+
+    .icon-lock-closed {
+      background-image: url("{{dir}}/public/icons/icon-lock-closed.svg");
+      height: 40px;
+      width: 30px;
+    }
+
+    .xyz-icon {
+      background-repeat: no-repeat;
+      background-position: center;
+      height: 36px;
+      width: 36px;
+    }
+
+    .btn-row {
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      display: flex;
+      gap: 10px;
+      margin: 10px 0;
+    }
+
+    button {
+      border: none;
+      outline: none;
+      background: none;
+      text-align: center;
+      color: white;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      &.flat {
+        border-radius: 3px;
+        border-bottom: 1px solid #f2f2f2;
+        padding: 0.3em;
+      }
+
+      &.raised {
+        border-radius: 3px;
+        border: 1px solid #f2f2f2;
+        box-shadow: 1px 1px 2px #f2f2f2;
+        padding: 0.3em;
+      }
+
+      &.primary-colour {
+        background-color: #003D57;
+      }
+
+      &.red {
+        background-color: #f44336;
+      }
+    }
+
+    @media only screen and (max-width: 700px) {
+
+      body,
+      h1 {
+        margin: 0
+      }
+    }
+  </style>
+
 </head>
 
 <body>
