Filter Visual Changes
1. Added new filter icon
2. zoomToExtent renamed zoomToFilteredExtent
3. zoomToFilteredExtent only shown when filter current has a length

--- a/public/css/_icons.css
+++ b/public/css/_icons.css
@@ -305,6 +305,16 @@
   }
 }
 
+.filter {
+  &.bg-icon {
+    background-image: url("../icons/icon-filter.svg");
+  }
+  &.mask-icon {
+    -webkit-mask-image: url("../icons/icon-filter.svg");
+    mask-image: url("../icons/icon-filter.svg");
+  }
+}
+
 .fullscreen {
   &.bg-icon {
     background-image: url("../icons/icon-fullscreen.svg");
