--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1079,6 +1079,15 @@ h3 {
     mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="48" width="48"><path d="M30.5 40.5h2V33h-2Zm1-9.45q.4 0 .7-.3.3-.3.3-.75 0-.4-.3-.7-.3-.3-.7-.3-.45 0-.725.3-.275.3-.275.7 0 .45.275.75t.725.3ZM9 7v14.75-.2V41 7v9.3Zm4.95 20h8.4q.6-.85 1.325-1.6.725-.75 1.575-1.4h-11.3Zm0 8.5h6.15q-.1-.75-.075-1.5.025-.75.125-1.5h-6.2ZM6 44V4h21.05L38 14.95v7.75q-.7-.35-1.45-.575-.75-.225-1.55-.375V16.3h-9.45V7H9v34h13q.55.85 1.2 1.6.65.75 1.4 1.4Zm26.75-19.45q4.05 0 6.875 2.825t2.825 6.875q0 4.05-2.825 6.875T32.75 43.95q-4.05 0-6.875-2.825T23.05 34.25q0-4.05 2.825-6.875t6.875-2.825Z"/></svg>');
   }
 }
+.zoom-in {
+  &.bg-icon {
+    background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23e8eaed"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Zm-40-60v-80h-80v-80h80v-80h80v80h80v80h-80v80h-80Z"/></svg>');
+  }
+  &.mask-icon {
+    -webkit-mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23e8eaed"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Zm-40-60v-80h-80v-80h80v-80h80v80h80v80h-80v80h-80Z"/></svg>');
+    mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23e8eaed"><path d="M784-120 532-372q-30 24-69 38t-83 14q-109 0-184.5-75.5T120-580q0-109 75.5-184.5T380-840q109 0 184.5 75.5T640-580q0 44-14 83t-38 69l252 252-56 56ZM380-400q75 0 127.5-52.5T560-580q0-75-52.5-127.5T380-760q-75 0-127.5 52.5T200-580q0 75 52.5 127.5T380-400Zm-40-60v-80h-80v-80h80v-80h80v80h80v80h-80v80h-80Z"/></svg>');
+  }
+}
 
 /* public/css/_inputs.css */
 input {
