--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -36,6 +36,10 @@
     background-color: var(--color-light);
 }
 
+.light-colour {
+    color: var(--color-light);
+}
+
 .lighter-background {
     background-color: var(--color-light-secondary);
 }
