--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -33,6 +33,10 @@
   background-color: var(--color-light);
 }
 
+.light-colour {
+  color: var(--color-light);
+}
+
 .lighter-background {
   background-color: var(--color-light-secondary);
 }
