--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -21,6 +21,9 @@
 .light-background {
   background-color: var(--color-light);
 }
+.light-colour {
+  color: var(--color-light);
+}
 .lighter-background {
   background-color: var(--color-light-secondary);
 }
