--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -8,4 +8,9 @@
     'opsz' 24;
   /* Customisation */
   text-align: center;
+  color: var(--color-primary);
+
+  &.active {
+    color: var(--color-on);
+  }
 }
