--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -993,6 +993,10 @@ input[type=search]::-webkit-search-cancel-button:hover {
     "GRAD" 0,
     "opsz" 24;
   text-align: center;
+  color: var(--color-primary);
+  &.active {
+    color: var(--color-on);
+  }
 }
 
 /* public/css/elements/_alert_confirm.css */
