--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -80,7 +80,6 @@
       padding: 0.5em;
       width: 100%;
       display: flex;
-      background-color: var(--color-primary);
     }
 
     #ctrl-tabs>div {
@@ -89,7 +88,7 @@
     }
 
     #ctrl-tabs>.active {
-      background-color: var(--color-on);
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 0px 0px;
     }
 
     #ctrl-panel {
