material symbol css + minor adjustments on default view;

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -9,4 +9,9 @@
   'opsz' 24;
   /* Customisation */
   text-align: center;
+  color: var(--color-primary);
+
+  &.active {
+    color: var(--color-on);
+  }
 }
