--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -998,6 +998,9 @@ input[type=search]::-webkit-search-cancel-button:hover {
     color: var(--color-on);
   }
 }
+.active > .material-symbols-outlined {
+  color: var(--color-on);
+}
 
 /* public/css/elements/_alert_confirm.css */
 dialog.alert-confirm {
