--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -14,8 +14,12 @@
     color: var(--color-on);
   }
 
-  &.on-colour {
+  &.on-colour, &.on {
     color: var(--color-on);
+  }
+
+  &.no-colour {
+    color: var(--color-no);
   }
 }
 
